--- a/_plays/05.md
+++ b/_plays/05.md
@@ -1,24 +1,135 @@
 ---
-play_number: 5
-title: Structure budgets and contracts to support delivery
+play_number: 1.d
+title: Strategic Analysis
 ---
 
-To improve our chances of success when contracting out development work, we need to work with experienced budgeting and contracting officers. In cases where we use third parties to help build a service, a well-defined contract can facilitate good development practices like conducting a research and prototyping phase, refining product requirements as the service is built, evaluating open source alternatives, ensuring frequent delivery milestones, and allowing the flexibility to purchase cloud computing resources.
+### Goals
+1. Evaluating different approaches (see below) based on cost and outcome.
+2. Understanding total cost of building, buying and owning software. 
+3. Mitigating downstream contracting issues (e.g. vendor lock-in)
+4. Preparing for a modular budgeting and development approach.
 
-[The TechFAR Handbook](https://techfarhub.cio.gov/handbook/) provides a detailed explanation of the flexibilities in the Federal Acquisition Regulation (FAR) that can help agencies implement this play.
+During this phase you will choose one of the following approaches:
+1. In-house development (city employees build software or deploy open source software)
+2. Hybrid development (city employees integrate and implement software in close collaboration with one or more vendors)
+3. Custom development (city contracts a software development firm to build custom software)
+4. Open source software customization (city contracts a software development firm to customize and deploy existing open source software)
+5. Off-the-shelf software (city procures existing software under a standard license agreement)
+
+
+### Plays
+_Conducting a total cost of procurement analysis:_ 
+
+If your market research revealed one or more commercially available software solutions, you have three primary options:
+1. Procure a software license,
+2. Procure software that is fully owned by the city,
+3. Develop full documentation showing that only one solution exists, and procure it through a sole-source contract.
+In order to weigh these options, you must perform a total cost of analysis, including direct and indirect, immediate and long-term costs. This should include:
+- The direct cost of the solution (annual license or ownership)
+- The acquisition costs including all costs of the procurement process and change management (if applicable).
+- The operating costs, including annual fees, per-user cost, and insurance.
+- The cost of integration with existing digital infrastructure at the city (in terms of staff time and any software or database costs).
+- The costs of disposal, which might include removal of the installation, clean-up costs or legal fees.
+- The cost of future software customization (work orders) if the city’s needs, processes, or underlying digital infrastructure changes in the future.
+- Analyze and document the total cost of acquiring and owning a license.
+- Analyze and document the total cost of acquiring and fully owning software.
+
+
+_Choosing to develop in-house, contract custom software, or contracting an open source instance:_ 
+
+If no good software exists already, you will need to build one from scratch or modify open source code. In either case, the work can be done in-house or contracted from a software development firm. If possible, working in-house can be more efficient, and more cost effective in the long run (saving on ongoing license fees and maintenance costs). But if there is insufficient internal expertise, or the initial cost of building is too high, you may choose to contract a vendor. In that case, you will use an RFP to define your project and find the best vendor to work with. And in both cases – if the work is internal or external – you will first need to complete step D5 (Agile Software Planning & Resourcing) to create a rough pre-plan. Together with the original problem statement and objectives, this rough plan will be either the starting point for writing an RFP or kicking off a project in-house 
+- Evaluate the cost of in-house development. If it is out of budget, or the city lacks sufficient in-house expertise, you may choose to use open source software or to contract custom software.
+- Create a pre-plan (Step D5).
+- Use a procurement process for a custom instance of open source software (B5) or for a custom software (C5).
+
+
+_Mitigating downstream contract issues:_ 
+
+As you analyze the available solutions that exist in the market, be critical and cautious of long-term issues that might arise as a function of a specific business model, a general approach to ownership or monetization, software performance, or contract details. This will influence your choice of strategy. Evaluate: 
+- _Ownership:_ Proprietary software; Dependence on proprietary systems (like databases), Data use and ownership; Software ownership. 
+- _Security:_ Vulnerability; Risk; Responsibility.
+- _Interoperability:_ APIs; Compatibility with existing technical infrastructure.
+- _Actual use:_ Many software companies charge a fee per “seat” or user who has access to use software, and impose minimums. However, in many cases not everyone who has a paid “seat” actually uses the software.
+- _Maintenance:_ Regular software updating; (Re)integration with new digital infrastructure; Ongoing user support.
+
+
+_Conducting an initial “design studio” workshop:_
+
+If there is nothing already existing in the market that addresses the problem statement, spend some time going through an open-ended design studio.
+- Explore process-based solutions. What changes – bureaucratic, budgetary, organizational, etc – could solve the problem, without software? 
+- Consider each end user who you engaged in your research, and the problems they faced. Write out a user journey in which the problem was solved. What are the key features of the alternative “day in the life”? What tools and process changes make this scenario possible? 
+- Return to the overall problem statement. Based on that statement and the new user journeys, create one or more sketches of what a solution could look like. Don’t get caught up in trying to design software; that will come later. For now, focus on real-world scenarios.
+
+
+_Conducting a total cost of building analysis:_
+
+If your market research did not reveal commercially available software solutions, you have four primary options:
+1. Build software from scratch in-house,
+2. Contract a vendor to develop custom software, 
+3. Implement an existing Open Source Software package with in-house developers,
+4. Implement an existing Open Source Software package by contracting a vendor to do a custom instance.
+In order to weigh these options, you should perform a total cost of building analysis. This should include:
+1. The initial design costs, including staff time and any external consultants for planning the agile development process.
+2. The cost of staff salaries for software development, change management and ongoing maintenance.
+3. The cost of integration with existing digital infrastructure at the city (in terms of staff time and any software or database costs).
+- Analyze and document the total cost of building in-house.
+- Analyze and document the total cost of procuring a custom-built software from a vendor.
+- Analyze and document the total cost of implementing an existing Open Source Software product (either in-house or contracted).
+
+
+_Modularizing the development process through budgeting and contracting:_
+
+Large software projects should be broken down into smaller pieces. Each should be tightly scoped, stand on its own and interface with other components. Each can be procured and built separately. Modular procurement and development:
+1. Minimizes the risks associated with the inherent uncertainty that exists at the outset of a project
+2. Reduces vendor lock-in, and puts the client in control if there are quality issues
+3. Aligns with agile development and with DevOps
+4. Reduces the timeline before seeing clear operational outcomes
+- Develop an initial sense of how the project can be broken down into smaller pieces.
+- Consider that individual pieces might use different development strategies (e.g. some OSS and some contracted)
+- In the next step, you will more specifically define and scope these modules.
+
+
+### Common Challenges
+- _Lack of attention to non-commercial solutions._ License fees for off-the-shelf products are predictable, and therefore easy to budget. In-house development is uncertain, but it often means lower cost and a better product in the long term. This requires a shift in capital budgets – which can be politically and organizationally challenging.
+- _Siloed budgeting and ownership._ Products are typically paid for and managed by a single department with its own budget. However, a good software procurement, development process, and ongoing maintenance will draw on several different business units. Furthermore, modular software should (at minimum) be interoperable with systems across the city.  
+- _Hesitancy to procure solutions that do not offer conventional support._ Customer service and support is a main feature of service contracts. The lack of support can be a big issue that comes up with open source software. Organizations like the Foundation for Public Code can help – they exist to steward and maintain open source software. 
+- _Lack of creative confidence._ There is a myth that civil servants aren’t, or can’t be, creative and can’t design software. This is false! You are the person who is best suited to understand the problem and imagine solutions. 
+- _Lack of familiarity with technical possibility._ Civil servants are not well informed about the state of the art (what is technically possible and impossible). Up front capacity building and market analysis should fill this gap.
+
 
 ### Checklist
-1. Budget includes research, discovery, and prototyping activities
-2. Contract is structured to request frequent deliverables, not multi-month milestones
-3. Contract is structured to hold vendors accountable to deliverables
-4. Contract gives the government delivery team enough flexibility to adjust feature prioritization and delivery schedule as the project evolves
-5. Contract ensures open source solutions are evaluated when technology choices are made
-6. Contract specifies that software and data generated by third parties remains under our control, and can be reused and released to the public as appropriate and in accordance with the law
-7. Contract allows us to use tools, services, and hosting from vendors with a variety of pricing models, including fixed fees and variable models like “pay-for-what-you-use” services
-8. Contract specifies a warranty period where defects uncovered by the public are addressed by the vendor at no additional cost to the government
-9. Contract includes a transition of services period and transition-out plan
+1. Strategic analysis of alternatives for addressing the problem statement based on direct and indirect, present and future costs.
+2. Analysis of the cost of building in-house, the cost of procuring a custom-built software, and the cost of implementing OSS (in-house or contracted).
+3. Identification of downstream contract issues that might arise from specific vendors or general business models.
+4. If there are no commercial solutions:
+5. Initial design studio report, in the form of user journeys and/or scenarios. 
 
-### Key Questions
-- What is the scope of the project? What are the key deliverables?
-- What are the milestones? How frequent are they?
-- What are the performance metrics defined in the contract (e.g., response time, system uptime, time period to address priority issues)?
+
+### References
+Total Cost of Ownership (TCO)
+https://cdn2.hubspot.net/hubfs/2652075/Downloadable_Files/regoUniversity%202018/Functional/TCO%20Best%20Practices%20for%20TCO%20Costing_SVMGT01.pdf
+
+FairMarkit: 4 Key steps to performing an effective spend analysis
+https://www.fairmarkit.com/blog/4-key-steps-to-performing-an-effective-spend-analysis
+
+CityMart: Choosing a Procurement Path
+https://medium.com/citymartinsights/unit-3-choosing-your-procurement-path-8e1b711d0268
+
+CityMart: Designing the Ownership Model
+https://medium.com/citymartinsights/unit-4-designing-the-ownership-model-b68e82439acb
+
+Association of Certified Fraud Examiners: Contract and Procurement Fraud
+https://www.fraudconference.com/uploadedFiles/Fraud_Conference/Content/Course-Materials/presentations/23rd/ppt/post-06-Fraud-in-Procurement-Without-Competition.pdf
+
+IT Product Management Integrated planning guide
+https://sara-sabr.github.io/ITStrategy/2021/10/15/product-management-part-2.html
+
+18F: Modular Contracting and Agile Development
+https://github.com/18F/Modular-Contracting-And-Agile-Development
+
+18F: Improving government outcomes through an agile contract format
+https://18f.gsa.gov/2017/11/30/improving-government-outcomes-through-an-agile-contract-format/
+
+18F: Why we love modular contracting
+https://18f.gsa.gov/2019/04/09/why-we-love-modular-contracting/
+
