Quote colon in page title
Front matter needs to be in key-value format, an unquoted colon creates
the non-fatal YAML Exception: "mapping values are not allowed in this
context"

--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,6 +1,6 @@
 ---
 play_number: 1
-title: Phase 1: Orientation
+title: "Phase 1: Orientation"
 ---
 
 The first phase is about creating a solid foundation for buying and using digital products. Capacity-building starts long before there is any specific software project. Product owners should spend time meeting staff members from various departments, hosting Q&A workshops, debunking myths about government procurement, establishing common language (“agile” “DevOps” “exclusionary criteria”), and sharing the basics of agile software development. The goal is to build up your colleagues’ familiarity with three main things: first, with the steps and objectives of legitimate public sector procurement; second, with contemporary software development processes; and third, with effective design research methods. 
